fixed spacing to px

--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ html {
   background-size: 90px;
   color: #fff;
   background-position: 1em 0;
-  padding-top: 7em;
+  padding-top: 110px;
 }
 
 @media only screen and (min-width: 60em) {
